[gd_scene load_steps=12 format=3 uid="uid://rv5dl08lcb8e"]

[ext_resource type="Script" uid="uid://b81eyjsixilbv" path="res://addons/copilot-advanced/Copilot.gd" id="1_pq1gj"]
[ext_resource type="Material" uid="uid://cccmbprav6vgu" path="res://addons/copilot-advanced/small_icon.tres" id="2_gdw4j"]
[ext_resource type="Script" uid="uid://dsjpmklb6juib" path="res://addons/copilot-advanced/LmStudioCompletion.gd" id="3_loa2x"]
[ext_resource type="Material" uid="uid://bl1rtf743e4l3" path="res://addons/copilot-advanced/large_icon.tres" id="3_xn70b"]
[ext_resource type="Texture2D" uid="uid://dgko4rse8ssdn" path="res://addons/copilot-advanced/asset/refresh.png" id="4_sh1u6"]
[ext_resource type="Texture2D" uid="uid://bglmfig6w4833" path="res://addons/copilot-advanced/asset/Check.png" id="5_446lv"]
[ext_resource type="Theme" uid="uid://b8ev0etxsbepm" path="res://addons/copilot-advanced/asset/BotTheme.tres" id="6_n0bkr"]
[ext_resource type="Script" uid="uid://c4w7is8s0l81m" path="res://addons/copilot-advanced/OllamaCompletion.gd" id="7_84eej"]
[ext_resource type="Script" uid="uid://b0klth4o6ymok" path="res://addons/copilot-advanced/GeminiCompletion.gd" id="8_urx8c"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f4c1j"]
bg_color = Color(0.152941, 0.152941, 0.152941, 0.623529)
shadow_size = 1

[sub_resource type="Theme" id="Theme_krmud"]
Label/styles/normal = SubResource("StyleBoxFlat_f4c1j")

[node name="Copilot" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pq1gj")
icon_shader = ExtResource("2_gdw4j")
highlight_color = Color(0.223529, 0.254902, 0.298039, 1)

[node name="VBoxParent" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Indicator" type="ColorRect" parent="VBoxParent"]
visible = false
material = ExtResource("3_xn70b")
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_horizontal = 4

[node name="ContextTitle" type="Label" parent="VBoxParent"]
visible = false
modulate = Color(1, 1, 1, 0.7)
layout_mode = 2
text = "Current Context"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Context" type="Label" parent="VBoxParent"]
visible = false
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Status" type="Label" parent="VBoxParent"]
visible = false
modulate = Color(1, 1, 1, 0.7)
custom_minimum_size = Vector2(2.08165e-12, 100)
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="HowToTitle" type="Label" parent="VBoxParent"]
visible = false
layout_mode = 2
text = "How To Use"

[node name="Separator1" type="HSeparator" parent="VBoxParent"]
visible = false
layout_mode = 2

[node name="HowTo" type="Label" parent="VBoxParent"]
visible = false
layout_mode = 2
text = "Press the selected shortcut in the code editor to request a completion from Copilot at the current caret position"
autowrap_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxParent"]
layout_mode = 2

[node name="SettingTitle" type="Label" parent="VBoxParent/HBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="CheckButton" type="CheckButton" parent="VBoxParent/HBoxContainer"]
layout_mode = 2
button_pressed = true
alignment = 2
icon_alignment = 2

[node name="Separator2" type="HSeparator" parent="VBoxParent"]
layout_mode = 2

[node name="SettingsCollapsable" type="VBoxContainer" parent="VBoxParent"]
layout_mode = 2

[node name="Provider" type="HBoxContainer" parent="VBoxParent/SettingsCollapsable"]
custom_minimum_size = Vector2(2.08165e-12, 2.08165e-12)
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="VBoxParent/SettingsCollapsable/Provider"]
custom_minimum_size = Vector2(100, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Select a provider"
vertical_alignment = 1
autowrap_mode = 3

[node name="VSeparator" type="VSeparator" parent="VBoxParent/SettingsCollapsable/Provider"]
layout_mode = 2

[node name="provider" type="OptionButton" parent="VBoxParent/SettingsCollapsable/Provider"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
selected = 2
fit_to_longest_item = false
item_count = 3
popup/item_0/text = "Ollama"
popup/item_0/id = 0
popup/item_1/text = "Lm studio"
popup/item_1/id = 1
popup/item_2/text = "Gemini"
popup/item_2/id = 2

[node name="ApiKeyContainer" type="HBoxContainer" parent="VBoxParent/SettingsCollapsable"]
unique_name_in_owner = true
custom_minimum_size = Vector2(2.08165e-12, 2.08165e-12)
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="VBoxParent/SettingsCollapsable/ApiKeyContainer"]
custom_minimum_size = Vector2(100, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Gemini api key"
vertical_alignment = 1

[node name="VSeparator" type="VSeparator" parent="VBoxParent/SettingsCollapsable/ApiKeyContainer"]
layout_mode = 2

[node name="API_KEY" type="LineEdit" parent="VBoxParent/SettingsCollapsable/ApiKeyContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(190, 0)
layout_mode = 2
size_flags_horizontal = 10
placeholder_text = "Fill with api key"

[node name="UrlContainer" type="HBoxContainer" parent="VBoxParent/SettingsCollapsable"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(2.08165e-12, 2.08165e-12)
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="VBoxParent/SettingsCollapsable/UrlContainer"]
custom_minimum_size = Vector2(100, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Server URL"
vertical_alignment = 1

[node name="VSeparator" type="VSeparator" parent="VBoxParent/SettingsCollapsable/UrlContainer"]
layout_mode = 2

[node name="URL" type="LineEdit" parent="VBoxParent/SettingsCollapsable/UrlContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(190, 0)
layout_mode = 2
size_flags_horizontal = 10
text = "http://127.0.0.1:1234"

[node name="SelectModel" type="HBoxContainer" parent="VBoxParent/SettingsCollapsable"]
custom_minimum_size = Vector2(2.08165e-12, 2.08165e-12)
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="VBoxParent/SettingsCollapsable/SelectModel"]
custom_minimum_size = Vector2(100, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Model"
vertical_alignment = 1

[node name="VSeparator" type="VSeparator" parent="VBoxParent/SettingsCollapsable/SelectModel"]
layout_mode = 2

[node name="Model" type="OptionButton" parent="VBoxParent/SettingsCollapsable/SelectModel"]
layout_mode = 2
size_flags_horizontal = 10
fit_to_longest_item = false

[node name="TextureButton" type="TextureButton" parent="VBoxParent/SettingsCollapsable/SelectModel"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
texture_normal = ExtResource("4_sh1u6")
ignore_texture_size = true
stretch_mode = 5

[node name="Check icon" type="TextureRect" parent="VBoxParent/SettingsCollapsable/SelectModel"]
visible = false
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
texture = ExtResource("5_446lv")
expand_mode = 1
stretch_mode = 5

[node name="Indicator" type="ColorRect" parent="VBoxParent/SettingsCollapsable/SelectModel"]
unique_name_in_owner = true
visible = false
material = ExtResource("3_xn70b")
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
size_flags_horizontal = 4

[node name="ShortcutSetting" type="HBoxContainer" parent="VBoxParent/SettingsCollapsable"]
custom_minimum_size = Vector2(2.08165e-12, 2.08165e-12)
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="VBoxParent/SettingsCollapsable/ShortcutSetting"]
custom_minimum_size = Vector2(100, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Shortcut"
vertical_alignment = 1

[node name="VSeparator" type="VSeparator" parent="VBoxParent/SettingsCollapsable/ShortcutSetting"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxParent/SettingsCollapsable/ShortcutSetting"]
layout_mode = 2
size_flags_horizontal = 10

[node name="Modifier" type="OptionButton" parent="VBoxParent/SettingsCollapsable/ShortcutSetting/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
selected = 0
item_count = 3
popup/item_0/text = "Alt"
popup/item_0/id = 0
popup/item_1/text = "Ctrl"
popup/item_1/id = 1
popup/item_2/text = "Shift"
popup/item_2/id = 2

[node name="Key" type="OptionButton" parent="VBoxParent/SettingsCollapsable/ShortcutSetting/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
selected = 2
item_count = 32
popup/item_0/text = "A"
popup/item_0/id = 0
popup/item_1/text = "B"
popup/item_1/id = 1
popup/item_2/text = "C"
popup/item_2/id = 2
popup/item_3/text = "D"
popup/item_3/id = 3
popup/item_4/text = "E"
popup/item_4/id = 4
popup/item_5/text = "F"
popup/item_5/id = 5
popup/item_6/text = "G"
popup/item_6/id = 6
popup/item_7/text = "H"
popup/item_7/id = 7
popup/item_8/text = "L"
popup/item_8/id = 8
popup/item_9/text = "M"
popup/item_9/id = 9
popup/item_10/text = "N"
popup/item_10/id = 10
popup/item_11/text = "O"
popup/item_11/id = 11
popup/item_12/text = "P"
popup/item_12/id = 12
popup/item_13/text = "Q"
popup/item_13/id = 13
popup/item_14/text = "R"
popup/item_14/id = 14
popup/item_15/text = "S"
popup/item_15/id = 15
popup/item_16/text = "T"
popup/item_16/id = 16
popup/item_17/text = "U"
popup/item_17/id = 17
popup/item_18/text = "V"
popup/item_18/id = 18
popup/item_19/text = "X"
popup/item_19/id = 19
popup/item_20/text = "Y"
popup/item_20/id = 20
popup/item_21/text = "Z"
popup/item_21/id = 21
popup/item_22/text = "1"
popup/item_22/id = 22
popup/item_23/text = "2"
popup/item_23/id = 23
popup/item_24/text = "3"
popup/item_24/id = 24
popup/item_25/text = "4"
popup/item_25/id = 25
popup/item_26/text = "5"
popup/item_26/id = 26
popup/item_27/text = "6"
popup/item_27/id = 27
popup/item_28/text = "7"
popup/item_28/id = 28
popup/item_29/text = "8"
popup/item_29/id = 29
popup/item_30/text = "9"
popup/item_30/id = 30
popup/item_31/text = "0"
popup/item_31/id = 31

[node name="Info box description" type="Label" parent="VBoxParent"]
visible = false
layout_mode = 2
text = "Suggested code"

[node name="ChatTitleContainer" type="HBoxContainer" parent="VBoxParent"]
layout_mode = 2

[node name="ChatTitle" type="Label" parent="VBoxParent/ChatTitleContainer"]
layout_mode = 2
text = "Chat"

[node name="EnableChat" type="CheckButton" parent="VBoxParent/ChatTitleContainer"]
layout_mode = 2
button_pressed = true
alignment = 2
icon_alignment = 2

[node name="Separator3" type="HSeparator" parent="VBoxParent"]
layout_mode = 2

[node name="ChatSection" type="ScrollContainer" parent="VBoxParent"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 367)
layout_mode = 2
theme = SubResource("Theme_krmud")
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxParent/ChatSection"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer2" type="MarginContainer" parent="VBoxParent/ChatSection/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="ChatContainer" type="VBoxContainer" parent="VBoxParent/ChatSection/VBoxContainer/MarginContainer2"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="RichTextLabel" parent="VBoxParent/ChatSection/VBoxContainer/MarginContainer2/ChatContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 0
focus_mode = 2
theme = ExtResource("6_n0bkr")
bbcode_enabled = true
text = "[b]Sample[/b]"
fit_content = true
selection_enabled = true

[node name="MarginContainer" type="MarginContainer" parent="VBoxParent/ChatSection/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxParent/ChatSection/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="ClearChat" type="Button" parent="VBoxParent/ChatSection/VBoxContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
text = "Clear"

[node name="InputChat" type="TextEdit" parent="VBoxParent/ChatSection/VBoxContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Ask here something..."

[node name="SendChatMessage" type="Button" parent="VBoxParent/ChatSection/VBoxContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
text = "Send"

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxParent"]
visible = false
layout_mode = 2

[node name="Info" type="RichTextLabel" parent="VBoxParent/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
focus_mode = 2
text = "func load_config():
	#Load preferences from user.cfg
	var file_path = PREFERENCES_STORAGE_NAME
	var reader = FileLoader.new(file_path)
	reader.set_mode(\"read\")
	var config = reader.load()
	if not config:
		return
	#Update settings
	model_select.update_from_config(config)
	lmStudioCompletions.update_from_config(config)
	oallamaCompletions.update_from_config(config)
	providerInput.set_value(config.get_string(\"provider\"))
	loader_interface.set_api_key(config.get_string(\"api_key"
selection_enabled = true

[node name="LLMs" type="Node" parent="."]

[node name="LmStudioCompletion" type="Node" parent="LLMs"]
script = ExtResource("3_loa2x")

[node name="Gemini" type="Node" parent="LLMs"]
script = ExtResource("8_urx8c")

[node name="OllamaCompletion" type="Node" parent="LLMs"]
script = ExtResource("7_84eej")

[node name="Version" type="Label" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -23.0
grow_horizontal = 2
grow_vertical = 0
horizontal_alignment = 2
vertical_alignment = 2

[connection signal="toggled" from="VBoxParent/HBoxContainer/CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="item_selected" from="VBoxParent/SettingsCollapsable/Provider/provider" to="." method="_on_provider_item_selected"]
[connection signal="text_changed" from="VBoxParent/SettingsCollapsable/ApiKeyContainer/API_KEY" to="." method="_on_url_text_changed"]
[connection signal="text_changed" from="VBoxParent/SettingsCollapsable/UrlContainer/URL" to="." method="_on_url_text_changed"]
[connection signal="item_selected" from="VBoxParent/SettingsCollapsable/SelectModel/Model" to="." method="_on_model_selected"]
[connection signal="button_down" from="VBoxParent/SettingsCollapsable/SelectModel/TextureButton" to="." method="_on_texture_button_button_down"]
[connection signal="item_selected" from="VBoxParent/SettingsCollapsable/ShortcutSetting/HBoxContainer/Modifier" to="." method="_on_shortcut_modifier_selected"]
[connection signal="item_selected" from="VBoxParent/SettingsCollapsable/ShortcutSetting/HBoxContainer/Key" to="." method="_on_shortcut_key_selected"]
[connection signal="toggled" from="VBoxParent/ChatTitleContainer/EnableChat" to="." method="_on_enable_chat_toggled"]
[connection signal="pressed" from="VBoxParent/ChatSection/VBoxContainer/MarginContainer/HBoxContainer/ClearChat" to="." method="_on_send_chat_message_2_pressed"]
[connection signal="pressed" from="VBoxParent/ChatSection/VBoxContainer/MarginContainer/HBoxContainer/SendChatMessage" to="." method="_on_send_chat_message_pressed"]
[connection signal="meta_clicked" from="VBoxParent/VBoxContainer/Info" to="." method="on_info_meta_clicked"]
[connection signal="chat_received" from="LLMs/LmStudioCompletion" to="." method="_on_lm_studio_completion_chat_received"]
[connection signal="completion_error" from="LLMs/LmStudioCompletion" to="." method="_on_code_completion_error"]
[connection signal="completion_received" from="LLMs/LmStudioCompletion" to="." method="_on_code_completion_received"]
[connection signal="chat_received" from="LLMs/Gemini" to="." method="_on_lm_studio_completion_chat_received"]
[connection signal="completion_error" from="LLMs/Gemini" to="." method="_on_code_completion_error"]
[connection signal="completion_received" from="LLMs/Gemini" to="." method="_on_code_completion_received"]
[connection signal="chat_received" from="LLMs/OllamaCompletion" to="." method="_on_lm_studio_completion_chat_received"]
[connection signal="completion_error" from="LLMs/OllamaCompletion" to="." method="_on_code_completion_error"]
[connection signal="completion_received" from="LLMs/OllamaCompletion" to="." method="_on_code_completion_received"]
